--- a/.github/workflows/hangover.yml
+++ b/.github/workflows/hangover.yml
@@ -16,7 +16,9 @@ jobs:
         os: [ubuntu2204]
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     - name: free disk space
       run: |
         sudo swapoff -a
